# airbyte-airflow-datalakehouse-dbt-metabase

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: airflow.cfg
dags/: dag_transformer.py
docker/: .env.example  Dockerfile.airflow  Dockerfile.metabase  Dockerfile.transformer  docker-compose-airflow.yml  docker-compose-datalakehouse.yml  docker-compose-metabase.yml  docker-compose-pg-source.yml  docker-compose-transformer.yml
tests/: test_dag_transformer.py
transformer/: .gitignore  dbt_project.yml  profiles.yml
transformer/models/: sources.yml
transformer/models/marts/: dim_users.sql  fct_bookings.sql  schema.yml
transformer/models/reports/: rpt_user_stats.sql  schema.yml
transformer/models/staging/: schema.yml  stg_bookings.sql  stg_users.sql
transformer/tests/: test_dim_users_future_created.sql  test_dim_users_unknown_source.sql  test_fct_bookings_positive_amounts.sql  test_fct_bookings_positive_quantity.sql  test_rpt_user_stats_all_users_present.sql  test_rpt_user_stats_non_negative_amount.sql
